; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_repository.c_git_repository__cleanup_files.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_repository.c_git_repository__cleanup_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@GIT_RMDIR_REMOVE_FILES = common dso_local global i32 0, align 4
@GIT_RMDIR_REMOVE_BLOCKERS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_repository__cleanup_files(%struct.TYPE_3__* %0, i8** %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i64 %2, i64* %7, align 8
  %12 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %12, i32* %8, align 4
  store i32 0, i32* %10, align 4
  store i64 0, i64* %9, align 8
  br label %13

13:                                               ; preds = %54, %3
  %14 = load i32, i32* %10, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %13
  %17 = load i64, i64* %9, align 8
  %18 = load i64, i64* %7, align 8
  %19 = icmp ult i64 %17, %18
  br label %20

20:                                               ; preds = %16, %13
  %21 = phi i1 [ false, %13 ], [ %19, %16 ]
  br i1 %21, label %22, label %57

22:                                               ; preds = %20
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i8**, i8*** %6, align 8
  %27 = load i64, i64* %9, align 8
  %28 = getelementptr inbounds i8*, i8** %26, i64 %27
  %29 = load i8*, i8** %28, align 8
  %30 = call i64 @git_buf_joinpath(i32* %8, i32 %25, i8* %29)
  %31 = icmp slt i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %22
  store i32 -1, i32* %4, align 4
  br label %60

33:                                               ; preds = %22
  %34 = call i8* @git_buf_cstr(i32* %8)
  store i8* %34, i8** %11, align 8
  %35 = load i8*, i8** %11, align 8
  %36 = call i64 @git_path_isfile(i8* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %33
  %39 = load i8*, i8** %11, align 8
  %40 = call i32 @p_unlink(i8* %39)
  store i32 %40, i32* %10, align 4
  br label %52

41:                                               ; preds = %33
  %42 = load i8*, i8** %11, align 8
  %43 = call i64 @git_path_isdir(i8* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %51

45:                                               ; preds = %41
  %46 = load i8*, i8** %11, align 8
  %47 = load i32, i32* @GIT_RMDIR_REMOVE_FILES, align 4
  %48 = load i32, i32* @GIT_RMDIR_REMOVE_BLOCKERS, align 4
  %49 = or i32 %47, %48
  %50 = call i32 @git_futils_rmdir_r(i8* %46, i32* null, i32 %49)
  store i32 %50, i32* %10, align 4
  br label %51

51:                                               ; preds = %45, %41
  br label %52

52:                                               ; preds = %51, %38
  %53 = call i32 @git_buf_clear(i32* %8)
  br label %54

54:                                               ; preds = %52
  %55 = load i64, i64* %9, align 8
  %56 = add i64 %55, 1
  store i64 %56, i64* %9, align 8
  br label %13

57:                                               ; preds = %20
  %58 = call i32 @git_buf_dispose(i32* %8)
  %59 = load i32, i32* %10, align 4
  store i32 %59, i32* %4, align 4
  br label %60

60:                                               ; preds = %57, %32
  %61 = load i32, i32* %4, align 4
  ret i32 %61
}

declare dso_local i64 @git_buf_joinpath(i32*, i32, i8*) #1

declare dso_local i8* @git_buf_cstr(i32*) #1

declare dso_local i64 @git_path_isfile(i8*) #1

declare dso_local i32 @p_unlink(i8*) #1

declare dso_local i64 @git_path_isdir(i8*) #1

declare dso_local i32 @git_futils_rmdir_r(i8*, i32*, i32) #1

declare dso_local i32 @git_buf_clear(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
